--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sai Kishor's Portfolio</title>
+    <link rel="icon" type="image/png" sizes="180x180" href="./assets/icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/icon1.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/icon2.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -32,7 +35,7 @@
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
         <div class="nav-controls">
-          <div class="hamburger" id="hamburger">
+          <div class="ham1" id="ham1">
             <span></span>
             <span></span>
             <span></span>
@@ -195,7 +198,7 @@
           <div class="skill-btn">ExpressJS</div>
           <div class="skill-btn">ReactJS</div>
           <div class="skill-btn">Node.js</div>
-          <div class="skill-btn">REST APIs</div>  
+          <div class="skill-btn">REST APIs</div>
           <div class="skill-btn">Version Control</div>
           <div class="skill-btn">Computer Networks</div>
           <div class="skill-btn">Operating System</div>
