profile added and alignment changed

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
           </div>
           <div class="home1-image">
             <img
-              src="https://i.postimg.cc/tCLTcqTq/Pro.jpg"
+              src="./assets/Pro.jpg"
               alt="Pappala Sai Kishor"
               class="profile-pic"
             />
