--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sai Kishor's Portfolio</title>
-    <link rel="icon" type="image/png" sizes="180x180" href="./assets/icon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="180x180"
+      href="./assets/icon.png"
+    />
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/icon1.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/icon2.png" />
     <link rel="stylesheet" href="style.css" />
@@ -555,7 +560,14 @@
         </div>
       </div>
     </footer>
-
+    <script>
+      window.va =
+        window.va ||
+        function () {
+          (window.vaq = window.vaq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
