--- a/public/index.html
+++ b/public/index.html
@@ -412,6 +412,26 @@
             <div class="experience-header">
               <div>
                 <h3>
+                  JAVA Full-Stack Developer Trainee<br />
+                  <p class="exp-company">Codegnan</p>
+                </h3>
+              </div>
+              <div class="experience-timeline">Jul 2025 - Present</div>
+            </div>
+
+            <p>
+              Gaining hands-on experience with Spring Boot, REST APIs,
+              Hibernate, MySQL, MongoDB, React, and JavaScript to build
+              responsive, real-time web applications and browser extensions
+              while practicing version control, testing, and deployment on cloud
+              platforms.
+            </p>
+          </div>
+          <br />
+          <div class="experience-card">
+            <div class="experience-header">
+              <div>
+                <h3>
                   MERN Stack Developer Intern<br />
                   <p class="exp-company">Codtech IT Solution</p>
                 </h3>
